# tic_tac_toe

./: CMakeLists.txt  README.md
include/auth/: user_manager.h
include/database/: db_manager.h
include/game/: ai_opponent.h  gameengine.h
include/ui/: gameboard.h  loginwindow.h  mainwindow.h
src/: main.cpp
src/auth/: user_manager.cpp
src/database/: db_manager.cpp
src/game/: ai_opponent.cpp  gameengine.cpp
src/ui/: gameboard.cpp  loginwindow.cpp  mainwindow.cpp
tests/: CMakeLists.txt  ai_opponent_test.cpp  game_engine_test.cpp
ui/: gameboard.ui  loginwindow.ui  mainwindow.ui
